[gd_scene load_steps=5 format=3]

[ext_resource path="res://scripts/Race.gd" type="Script" id=1]
[ext_resource path="res://scripts/Track.gd" type="Script" id=2]
[ext_resource path="res://scripts/CarManager.gd" type="Script" id=3]
[ext_resource path="res://scenes/Car.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/LaneStatusPanel.gd" type="Script" id=5]
[ext_resource path="res://scripts/DraftMeter.gd" type="Script" id=6]
[ext_resource path="res://scripts/RaceController.gd" type="Script" id=7]
[ext_resource path="res://scripts/SpeedAura.gd" type="Script" id=8]
[ext_resource path="res://styles/hud_panel_style.tres" type="StyleBoxFlat" id=9]
[ext_resource path="res://scripts/AudioManager.gd" type="Script" id=10]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Track" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="PlayerCar" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 0 )

[node name="CarManager" type="Node2D" parent="."]
script = ExtResource( 3 )
car_scene = ExtResource( 4 )
player_node = NodePath( "PlayerCar" )
race_controller_path = NodePath( "RaceController" )

[node name="RaceController" type="Node" parent="."]
script = ExtResource( 7 )
car_manager_path = NodePath( "CarManager" )
player_car_path = NodePath( "PlayerCar" )
label_path = NodePath( "HUD/TopPanel/RaceStateLabel" )
audio_manager_path = NodePath( "AudioManager" )
lap_label_path = NodePath( "HUD/TopPanel/LapLabel" )

[node name="SpeedAura" type="CanvasLayer" parent="."]
script = ExtResource( 8 )
player_path = NodePath( "PlayerCar" )

[node name="AudioManager" type="Node" parent="."]
script = ExtResource( 10 )

[node name="EngineLoop" type="AudioStreamPlayer" parent="AudioManager"]
autoplay = false

[node name="DraftPulse" type="AudioStreamPlayer" parent="AudioManager"]
autoplay = false

[node name="StartChime" type="AudioStreamPlayer" parent="AudioManager"]
autoplay = false

[node name="FinishChime" type="AudioStreamPlayer" parent="AudioManager"]
autoplay = false

[node name="Click" type="AudioStreamPlayer" parent="AudioManager"]
autoplay = false

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TopPanel" type="Panel" parent="HUD"]
rect_position = Vector2( 24, 22 )
rect_min_size = Vector2( 432, 140 )
custom_styles/panel = ExtResource( 9 )

[node name="SpeedLabel" type="Label" parent="TopPanel"]
position = Vector2( 16, 10 )
text = "SPEED: 000"

[node name="InfoLabel" type="Label" parent="TopPanel"]
position = Vector2( 16, 46 )
text = ""

[node name="RaceStateLabel" type="Label" parent="TopPanel"]
position = Vector2( 16, 74 )
text = "START"

[node name="TrackLabel" type="Label" parent="TopPanel"]
position = Vector2( 16, 102 )
text = "TRACK: 3-LANE OVAL"

[node name="PositionLabel" type="Label" parent="TopPanel"]
position = Vector2( 190, 102 )
text = "POSITION: 1"

[node name="LapLabel" type="Label" parent="TopPanel"]
position = Vector2( 190, 74 )
text = "LAP 1/10"

[node name="RestartButton" type="Button" parent="TopPanel"]
rect_position = Vector2( 312, 16 )
rect_min_size = Vector2( 100, 32 )
text = "Restart Race"

[node name="MenuButton" type="Button" parent="TopPanel"]
rect_position = Vector2( 312, 58 )
rect_min_size = Vector2( 100, 32 )
text = "Main Menu"

[node name="LanePanel" type="Panel" parent="HUD"]
rect_position = Vector2( 24, 168 )
rect_min_size = Vector2( 432, 170 )
custom_styles/panel = ExtResource( 9 )

[node name="LaneStatus" type="VBoxContainer" parent="LanePanel"]
script = ExtResource( 5 )
rect_position = Vector2( 12, 12 )
rect_min_size = Vector2( 408, 146 )
custom_constants/separation = 6
car_manager_path = NodePath( "../../CarManager" )
max_nearby_display = 8

[node name="BottomPanel" type="Panel" parent="HUD"]
rect_position = Vector2( 24, 350 )
rect_min_size = Vector2( 432, 90 )
custom_styles/panel = ExtResource( 9 )

[node name="DraftLabel" type="Label" parent="BottomPanel"]
position = Vector2( 16, 8 )
text = "Draft Boost"

[node name="DraftMeter" type="Control" parent="BottomPanel"]
script = ExtResource( 6 )
rect_position = Vector2( 16, 32 )
rect_min_size = Vector2( 400, 48 )
car_manager_path = NodePath( "../../CarManager" )
